--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <label  class="first_label" for="login">Электронный адрес или номер телефона</label>
         <input type="email" id="login">
-        <label  class="second_label" for="login">Пароль</label>
+        <label  class="second_label" for="password">Пароль</label>
         <input type="password" id="password">
         <input type="submit" id="btn" value="Вход">
         <a href="https://www.facebook.com" class="lost_pass">Забыли аккаунт?</a> 
@@ -40,8 +40,8 @@
         <a href="https://www.facebook.com" class="second_href">Зачем указывать дату рождения?</a> 
                 
         <div id="radio_btn">
-            <input type="radio" id="gender" name="check" value=male> Мужчина
-            <input type="radio" id="gender" name="check" value=female> Женщина
+            <input type="radio" id="male" name="check" value=male> Мужчина
+            <input type="radio" id="female" name="check" value=female> Женщина
         </div>
                     
         <label id="rule">
